# storm-testsuite

./: .gitignore  AUTHORS  CREDITS  ChangeLog  INSTALL  Jenkinsfile  MANIFEST.in  Makefile  Makefile.am  Makefile.inc  PKG-INFO  README  README.md  bootstrap  configure.ac  setup.cfg  setup.py  t-storm.spec  tstorm.spec.in
conf/: 8-digit-string.ini  8_digit_string_checksum.ini  Makefile.am  map_test_id.json  map_tests_ids.json  map_tests_ids.json.1.8.2  map_tests_ids.json.v1.8.1  test_id.json  tstorm-sanity-tp.json  tstorm-sanity-tp.json.template  tstorm-sanity.ini  tstorm-tier1-tape.ini  tstorm-tier1.ini  tstorm-tp.json  tstorm-tp.json.template  tstorm.ini
docker/: Dockerfile  Jenkinsfile  README.md  build-image.sh  push-image-dockerhub.sh  push-image.sh
docker/setup/: manifest.pp  setup.sh
jenkins/: pod.yaml
lib/: cdmi.robot  clientSRM.robot  clientSRM.txt  config.robot  config.txt  credentials.txt  curl.robot  curl.txt  dcache.robot  dcache.txt  filetransfer.robot  filetransfer.txt  gfal_util.robot  globus_util.robot  globus_util.txt  import.robot  infosystem.robot  infosystem.txt  lcg_util.robot  lcg_util.txt  metadata.robot  metadata.txt  oidc.robot  recall.robot  recall.txt  setup.robot  setup.txt  stormlib.robot  stormlib.txt  utils.robot  variables.robot  variables.txt  webdav.robot  webdav.txt  webdav_util.robot  webdav_util.txt
m4/: storm.m4
other/: README  rt_3_4_13_rfc_130.sh  rt_3_4_14_rfc_131.sh  rt_8_1_rfc_130.sh  rt_8_2_rfc_131.sh  rt_8_3_rfc_164.sh  rt_8_4_rfc_85.sh  rt_8_5_rfc_169.sh  rt_9_1_rfc_130.sh  rt_9_2_rfc_131.sh  rt_9_3_rfc_164.sh  rt_9_4_rfc_85.sh  rt_9_5_rfc_169.sh
runner/: .env  Jenkinsfile  docker-compose.yml  run.sh
runner/assets/: run_testsuite.sh
sbin/: tstorm-sanity-setup.sh.in  tstorm-setup.sh
tests/: __init__.txt
tests/cdmi/: cdmi_tests.robot
tests/checksum/: tests.txt
tests/filetransfer/: __init__.txt  get.robot  get.txt  put.robot  put.txt  tests.txt  unauthorized.txt
tests/glue/1_3/: glue_1_3.robot
tests/glue/2_0/: glue_2_0.robot  glue_2_0.txt
tests/metadata/: __init__.robot  metadata_tests.robot  metadata_tests.txt
tests/srm/: __init__.txt  mixedtests.robot  mixedtests.txt  quicktest.txt  tests.robot  tests.txt  validation.robot  validation.txt
tests/srm/commands/: srmAbort.robot  srmAbort.txt  srmBol.robot  srmBol.txt  srmGTP.robot  srmGTP.txt  srmLs.robot  srmLs.txt  srmMkDir.robot  srmMkDir.txt  srmMv.robot  srmMv.txt  srmPd.robot  srmPd.txt  srmPing.robot  srmPing.txt  srmPtG.robot  srmPtG.txt  srmPtP.robot  srmPtP.txt  srmRf.robot  srmRf.txt  srmRm.robot  srmRm.txt  srmRmDir.robot  srmRmDir.txt  srmSBoL.robot  srmSBoL.txt  srmSPtG.robot  srmSPtG.txt  srmSPtP.robot  srmSPtP.txt
tests/srm/data_transfer/: data_transfer.robot  data_transfer.txt
tests/srm/dcache_srmclient/: dcache_srmclient.robot  dcache_srmclient.txt
tests/srm/directory/: directory.txt
tests/srm/discovery/: discovery.txt
tests/srm/lcg_utils/: lcg_utils.robot  lcg_utils.txt
tests/srm/space_management/: info.txt  space_management.robot  space_management.txt  used_space_info.robot  used_space_info.txt
tests/srm/specification/: srmPtG.txt  srmPtP.txt  srmRm.txt
tests/webdav/: __init__.robot  __init__.txt  copy.robot  copy.txt  delete.robot  delete.txt  forbidden.robot  forbidden.txt  get.robot  get.txt  head.robot  head.txt  mkcol.robot  mkcol.txt  move.robot  move.txt  options.robot  options.txt  propfind.robot  propfind.txt  put.robot  put.txt  regression.robot  regression.txt  renaming.robot  renaming.txt  symlink.robot  symlink.txt  unauthorized.txt  webdav.txt
tests/webdav/test/: __init__.txt  delete.txt  get.txt  (+3 more)
tstorm/: Makefile.am  __init__.py
tstorm/commands/: Makefile.am  abort.py  bringonline.py  cp.py  curl.py  ls.py  mkdir.py  mv.py  ping.py  protocol.py  rm.py  rmdir.py  space.py
tstorm/run/: Makefile  Makefile.am  Makefile.in  run_sanity_tests.py  run_stress_tests.py  run_tests.py
tstorm/test/: 8_digit_string_checksum_rt.py  atomics.py  basictests.py  basictests_novoms.py  commontests.py  eight_digit_string_checksum_rt.py  functionalities.py  https.py  ldapquery.py  regression.py  regression_conf.py  regression_conftests.py  regression_ldaptests.py  regressiontest.py  regressiontests.py  sequence_functionalities.py  service_conf.py  tape.py  tapetests.py  testcases.py  utilities.py
tstorm/tests/: Makefile.am  atomics.py  basictests.py  basictests_novoms.py  commontests.py  functionalities.py  regression.py  regression_conftests.py  regressiontests.py  regressiontests_novoms.py  tape.py  tapetests.py  utilities.py
tstorm/tests/atomic/: Makefile.am  atomics.py  atomicstests.py
tstorm/tests/deployment/: Makefile.am  conf.py  conftests.py  services.py.in
tstorm/tests/deployment/regression/: Makefile.am  __init__.py  gluetwo_ldapquery.py  info_ldapquery.py  ldapquery.py  regression_conftests.py  regression_infotests.py  regression_ldaptests.py  service_configuration.py  service_configuration.py.in
tstorm/tests/functional/: Makefile.am  functionalities.py  functionalitiestests.py  functionalitiestests_novoms.py  https.py  tape.py  tapetests.py  webdav.py  webdavtests.py
tstorm/tests/functional/regression/: Makefile.am  glueone_ldapquery.py  gluetwo_ldapquery.py  regression.py  regression_ldaptests.py  regressiontests.py  regressiontests_novoms.py
tstorm/tests/load/: Makefile.am  Makefile.in  __init__.py  loads.py  loadstests.py
tstorm/utils/: Makefile.am  abort.py  bringonline.py  check_testplan.py  cksm.py  config.py  configuration.py  cp.py  createfile.py  filters.py  filters_checks.py  findstrings.py  infosystem.py  ldapsearch.py  library_dependencies.py  limit.py  listinfo.py  ls.py  map_test_id.py  map_tests_ids.py  mkdir.py  modifydeffile.py  mysqlquery.py  ping.py  range.py  range_checks.py  readfile.py  release.py  release_checks.py  removefile.py  report_file.py  reportfile.py  rm.py  rmdir.py  rpm.py  run_sanity_tests.py  run_stress_tests.py  run_tests.py  runtestss.py  sequence.py  (+14 more)
tstorm/utils/unittest/: limit_test.py  limit_tests.py  range_tests.py  release_tests.py  usage_tests.py
(+6 files in other folders)
