EXTRA_DIST = \
   tstorm-sanity.ini \
   tstorm-sanity-tp.json \
   tstorm.ini \
   tstorm-tp.json

tstormsanityconfdir = $(sysconfdir)/tstorm/sanity
dist_tstormsanityconf_DATA = tstorm-sanity.ini \
   tstorm-sanity-tp.json

tstormconfdir = $(sysconfdir)/tstorm/
dist_tstormconf_DATA = tstorm.ini \
   tstorm-tp.json

MAINTAINERCLEANFILES = Makefile.in

CLEANFILES=\
   *.in
