
tstormcommandsdir = @pyexecdir@/tstorm/commands
tstormcommands_PYTHON = abort.py \
    mkdir.py \
    bringonline.py \
    ping.py \
    cp.py \
    rmdir.py \
    __init__.py \
    rm.py \
    ls.py \
    space.py

EXTRA_DIST = \
    abort.py \
    mkdir.py \
    bringonline.py \
    ping.py \
    cp.py \
    rmdir.py \
    __init__.py \
    rm.py \
    ls.py \
    space.py

CLEANFILES=\
    abort.pyc \
    mkdir.pyc \
    bringonline.pyc \
    ping.pyc \
    cp.pyc \
    rmdir.pyc \
    __init__.pyc \
    rm.pyc \
    ls.pyc \
    space.pyc \
    abort.pyo \
    mkdir.pyo \
    bringonline.pyo \
    ping.pyo \
    cp.pyo \
    rmdir.pyo \
    __init__.pyo \
    rm.pyo \
    ls.pyo \
    space.pyo
