# Copyright (c) Istituto Nazionale di Fisica Nucleare (INFN). 2006-2010.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
#
# Authors: Elisabetta Ronchieri <elisabetta.ronchieri@cnaf.infn.it>
#

tstormrundir = @pyexecdir@/tstorm/run
tstormrun_PYTHON = \
    __init__.py \
    run_tests.py \
    run_sanity_tests.py \
    run_stress_tests.py 

EXTRA_DIST = \
    __init__.py \
    run_tests.py \
    run_sanity_tests.py \
    run_stress_tests.py 

CLEANFILES= \
    __init__.pyo \
    __init__.pyc \
    run_tests.pyo \
    run_tests.pyc \
    run_sanity_tests.pyo \
    run_sanity_tests.pyc \
    run_stress_tests.pyo \
    run_stress_tests.pyc 
