SUBDIRS = deployment

tstormtestsdir = @pyexecdir@/tstorm/tests
tstormtests_PYTHON = atomics.py \
    https.py \
    tape.py \
    basictests_novoms.py \
    __init__.py \
    tapetests.py \
    basictests.py \
    regression.py \
    utilities.py \
    commontests.py \
    regressiontests_novoms.py \
    functionalities.py \
    regressiontests.py

EXTRA_DIST = \
    atomics.py \
    https.py \
    tape.py \
    basictests_novoms.py \
    __init__.py \
    tapetests.py \
    basictests.py \
    regression.py \
    utilities.py \
    commontests.py \
    regressiontests_novoms.py \
    functionalities.py \
    regressiontests.py

CLEANFILES= \
    atomics.pyc \
    https.pyc \
    tape.pyc \
    basictests_novoms.pyc \
    __init__.pyc \
    tapetests.pyc \
    basictests.pyc \
    regression.pyc \
    utilities.pyc \
    commontests.pyc \
    regressiontests_novoms.pyc \
    functionalities.pyc \
    regressiontests.pyc \
    atomics.pyo \
    https.pyo \
    tape.pyo \
    basictests_novoms.pyo \
    __init__.pyo \
    tapetests.pyo \
    basictests.pyo \
    regression.pyo \
    utilities.pyo \
    commontests.pyo \
    regressiontests_novoms.pyo \
    functionalities.pyo \
    regressiontests.pyo
