# Copyright (c) Istituto Nazionale di Fisica Nucleare (INFN). 2006-2010.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
#
# Authors: Elisabetta Ronchieri <elisabetta.ronchieri@cnaf.infn.it>
#

tstormutilsdir = @pyexecdir@/tstorm/utils
tstormutils_PYTHON = \
    check_testplan.py \
    mysqlquery.py \
    cksm.py \
    readfile.py \
    config.py \
    removefile.py \
    configuration.py \
    report_file.py \
    createfile.py \
    rpm.py \
    findstrings.py \
    service.py \
    infosystem.py \
    settings.py \
    __init__.py \
    utils.py \
    ldapsearch.py \
    version.py \
    listinfo.py \
    yaim.py \
    map_tests_ids.py \
    range_checks.py \
    tests_checks.py \
    tests_info.py \
    tests_methods.py

EXTRA_DIST = \
    check_testplan.py \
    mysqlquery.py \
    cksm.py \
    readfile.py \
    config.py \
    removefile.py \
    configuration.py \
    report_file.py \
    createfile.py \
    rpm.py \
    findstrings.py \
    service.py \
    infosystem.py \
    settings.py \
    __init__.py \
    utils.py \
    ldapsearch.py \
    version.py \
    listinfo.py \
    yaim.py \
    map_tests_ids.py \
    range_checks.py \
    tests_checks.py \
    tests_info.py \
    tests_methods.py

CLEANFILES= \
    check_testplan.pyc \
    mysqlquery.pyc \
    cksm.pyc \
    readfile.pyc \
    config.pyc \
    removefile.pyc \
    configuration.pyc \
    report_file.pyc \
    createfile.pyc \
    rpm.pyc \
    findstrings.pyc \
    service.pyc \
    infosystem.pyc \
    settings.pyc \
    __init__.pyc \
    utils.pyc \
    ldapsearch.pyc \
    version.pyc \
    listinfo.pyc \
    yaim.pyc \
    map_tests_ids.pyc \
    range_checks.pyc \
    test_checks.pyc \
    test_info.pyc \
    test_methods.pyc \
    check_testplan.pyo \
    mysqlquery.pyo \
    cksm.pyo \
    readfile.pyo \
    config.pyo \
    removefile.pyo \
    configuration.pyo \
    report_file.pyo \
    createfile.pyo \
    rpm.pyo \
    findstrings.pyo \
    service.pyo \
    infosystem.pyo \
    settings.pyo \
    __init__.pyo \
    utils.pyo \
    ldapsearch.pyo \
    version.pyo \
    listinfo.pyo \
    yaim.pyo \
    map_tests_ids.pyo \
    range_checks.pyo \
    tests_checks.pyo \
    tests_info.pyo \
    tests_methods.pyo
