# Copyright (c) Istituto Nazionale di Fisica Nucleare (INFN). 2006-2010.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
#
# Authors: Elisabetta Ronchieri <elisabetta.ronchieri@cnaf.infn.it>
#

SUBDIRS = regression

tstormfunctionaltestsdir = @pyexecdir@/tstorm/tests/functional
tstormfunctionaltests_PYTHON = \
    functionalities.py \
    functionalitiestests_novoms.py \
    functionalitiestests.py \
    https.py \
    __init__.py \
    webdav.py \
    webdavtests.py \
    tape.py \
    tapetests.py

EXTRA_DIST = \
    functionalities.py \
    functionalitiestests_novoms.py \
    functionalitiestests.py \
    https.py \
    __init__.py \
    webdav.py \
    webdavtests.py \
    tape.py \
    tapetests.py

CLEANFILES= \
    functionalities.pyc \
    functionalitiestests_novoms.pyc \
    functionalitiestests.pyc \
    https.pyc \
    __init__.pyc \
    webdav.pyc \
    webdavtests.pyc \
    tape.pyc \
    tapetests.pyc \
    functionalities.pyo \
    functionalitiestests_novoms.pyo \
    functionalitiestests.pyo \
    https.pyo \
    __init__.pyo \
    webdav.pyo \
    webdavtests.pyo \
    tape.pyo \
    tapetests.pyo
