
tstormregressiondir = @pyexecdir@/tstorm/tests/deployment/regression
tstormregression_PYTHON = gluetwo_ldapquery.py \
    ldapquery.py \
    regression_ldaptests.py \
    __init__.py \
    regression_conftests.py \
    service_configuration.py

EXTRA_DIST = \
    gluetwo_ldapquery.py \
    ldapquery.py \
    regression_ldaptests.py \
    __init__.py \
    regression_conftests.py \
    service_configuration.py

CLEANFILES= \
    gluetwo_ldapquery.pyc \
    ldapquery.pyc \
    regression_ldaptests.pyc \
    __init__.pyc \
    regression_conftests.pyc \
    service_configuration.pyc \
    gluetwo_ldapquery.pyo \
    ldapquery.pyo \
    regression_ldaptests.pyo \
    __init__.pyo \
    regression_conftests.pyo \
    service_configuration.pyo
