# Copyright (c) Istituto Nazionale di Fisica Nucleare (INFN). 2006-2010.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
#
# Authors: Elisabetta Ronchieri <elisabetta.ronchieri@cnaf.infn.it>
#

tstormregressiondir = @pyexecdir@/tstorm/tests/deployment/regression
tstormregression_PYTHON = \
    ldapquery.py \
    regression_ldaptests.py \
    __init__.py \
    regression_conftests.py \
    service_configuration.py

EXTRA_DIST = \
    ldapquery.py \
    regression_ldaptests.py \
    __init__.py \
    regression_conftests.py \
    service_configuration.py.in

CLEANFILES= \
    service_configuration.py \
    ldapquery.pyc \
    regression_ldaptests.pyc \
    __init__.pyc \
    regression_conftests.pyc \
    service_configuration.pyc \
    ldapquery.pyo \
    regression_ldaptests.pyo \
    __init__.pyo \
    regression_conftests.pyo \
    service_configuration.pyo
