# Copyright (c) Istituto Nazionale di Fisica Nucleare (INFN). 2006-2010.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
#
# Authors: Elisabetta Ronchieri <elisabetta.ronchieri@cnaf.infn.it>
#

tstormfunregressiondir = @pyexecdir@/tstorm/tests/functional/regression
tstormfunregression_PYTHON = \
    glueone_ldapquery.py \
    gluetwo_ldapquery.py \
    __init__.py \
    regression.py \
    regression_ldaptests.py \
    regressiontests_novoms.py \
    regressiontests.py 

EXTRA_DIST = \
    glueone_ldapquery.py \
    gluetwo_ldapquery.py \
    __init__.py \
    regression.py \
    regression_ldaptests.py \
    regressiontests_novoms.py \
    regressiontests.py

CLEANFILES= \
    glueone_ldapquery.pyc \
    glueone_ldapquery.pyo \
    gluetwo_ldapquery.pyc \
    gluetwo_ldapquery.pyo \
    __init__.pyc \
    regression.pyc \
    regression_ldaptests.pyc \
    regression_ldaptests.pyo \
    regressiontests_novoms.pyc \
    regressiontests.pyc \
    __init__.pyo \
    regression.pyo \
    regressiontests_novoms.pyo \
    regressiontests.pyo
